<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/insertar"
        app:layout_constraintEnd_toStartOf="@+id/mos"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toStartOf="@+id/bor"
        app:layout_constraintStart_toEndOf="@+id/ins"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mos"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/cambiar"
        app:layout_constraintEnd_toStartOf="@+id/nomser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ins" />

    <EditText
        android:id="@+id/nomser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:ems="10"
        android:hint="@string/nombreserie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cam"
        app:layout_constraintTop_toBottomOf="@+id/mos" />

    <EditText
        android:id="@+id/ano"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/año"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cadena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nomser"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cadena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:ems="10"
        android:hint="@string/cadena"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/numtemp"
        app:layout_constraintEnd_toStartOf="@+id/numtemp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ano" />

    <EditText
        android:id="@+id/numtemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/temporadas"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toStartOf="@+id/ide"
        app:layout_constraintStart_toEndOf="@+id/cadena"
        app:layout_constraintTop_toBottomOf="@+id/cadena" />

    <EditText
        android:id="@+id/ide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/numtemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numtemp" />

    <EditText
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/temporada"
        app:layout_constraintEnd_toStartOf="@+id/temporada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numtemp" />

    <EditText
        android:id="@+id/temporada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/temporada"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lista"
        app:layout_constraintEnd_toStartOf="@+id/numcap"
        app:layout_constraintStart_toEndOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/numcap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/num_capitulo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temporada" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temporada" />
</android.support.constraint.ConstraintLayout>